--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -71,7 +71,7 @@ metadata:
 spec:
   params:
     - name: repository
-      value: "https://github.com/open-toolchain/hello-tekton"
+      value: "https://github.com/MGsus/hello-tekton"
     - name: revision
       value: "master"
 ---
